@@ -386,3 +386,7 @@
 - Added Crafty's Stuff to the loot table of Magmoth Shaman for the quest Dirty, Stinkin' Snobolds!
 - Added Crafty's Stuff to the loot table of Magmoth Forager for the quest Dirty, Stinkin' Snobolds!
 - Updated the flags of Crafty's Stuff to allow every member of a group to loot it.
+
+[2022-06-04]
+- Added Microfilm to the loot table of Scavenge-bot 005-B6 for the quest Lupus Pupus.
+- Updated the flags of Microfilm to allow every member of a group to loot it.
